# mmio

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  run_bench.sh
.github/workflows/: build.yaml  get_graphblas.sh  install_compilers.sh
bench/: CMakeLists.txt  fmm_read.cpp  io.cpp  io_c.c  lagr_mmio_read.c  mmio_read.c  mtx_io_read.c  mtxio_read.c  pigo_read.cpp
cmake/: FindGraphBLAS.cmake
data/: generate_data.py  simple.mtx  simple2.mtx  simple_no_newline.mtx  test_FW_1000.mtx
include/: io_util.h  mmio.h  mtx_io.h  mtxio.h
scratch/: io.cpp
src/: io_util.c  mmio.c  mtx_io.c  mtxio.c
test/: CMakeLists.txt  test_compare.c  test_mtxio_utils.c  test_simple.c  test_util.h
